src/test/deca/syntax/valid/provided/Test_boolean.deca
//boolean
{
boolean bool = true;
if (bool){
    println("baaam");
}
}
