src/test/deca/syntax/invalid/provided/ifvide.deca
// Description
//   If statement without condition
//
// Résultats:
//   Erreur: :3:7: mismatched input ')' expecting ... 
{
    if(){
        println("ifvide");
    }
}
